@@ -17,17 +17,12 @@
 
 package org.apache.poi.ss.formula;
 
-import java.text.CollationKey;
-import java.text.Collator;
-import java.text.DecimalFormat;
-import java.text.DecimalFormatSymbols;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 
@@ -51,7 +46,6 @@ import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
 import org.apache.poi.ss.util.CellRangeAddress;
 import org.apache.poi.ss.util.CellReference;
-import org.apache.poi.util.LocaleUtil;
 
 /**
  * Abstracted and cached version of a Conditional Format rule for use with a
@@ -68,6 +62,9 @@ import org.apache.poi.util.LocaleUtil;
  * create whatever style objects they need, caching those at the application level.
  * Thus this class only caches values needed for evaluation, not display.
  */
+/**
+ *
+ */
 public class EvaluationConditionalFormatRule implements Comparable<EvaluationConditionalFormatRule> {
 
     private final WorkbookEvaluator workbookEvaluator;
@@ -78,26 +75,20 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
     /* cached values */
     private final CellRangeAddress[] regions;
     /**
-     * Depending on the rule type, it may want to know about certain values in the region when evaluating {@link #matches(CellReference)},
+     * Depending on the rule type, it may want to know about certain values in the region when evaluating {@link #matches(Cell)},
      * such as top 10, unique, duplicate, average, etc.  This collection stores those if needed so they are not repeatedly calculated
      */
-    private final Map<CellRangeAddress, Set<ValueAndFormat>> meaningfulRegionValues = new HashMap<>();
+    private final Map<CellRangeAddress, Set<ValueAndFormat>> meaningfulRegionValues = new HashMap<CellRangeAddress, Set<ValueAndFormat>>();
     
     private final int priority;
     private final int formattingIndex;
     private final int ruleIndex;
     private final String formula1;
     private final String formula2;
-    private final String text;
-    // cached for performance, used with cell text comparisons, which are case insensitive and need to be Locale aware (contains, starts with, etc.) 
-    private final String lowerText;
-
     private final OperatorEnum operator;
     private final ConditionType type;
-    // cached for performance, to avoid reading the XMLBean every time a conditionally formatted cell is rendered
+    // cached for performance, to avoid reading the XMLBean every time a conditinally formatted cell is rendered
     private final ExcelNumberFormat numberFormat;
-    // cached for performance, used to format numeric cells for string comparisons.  See Bug #61764 for explanation
-    private final DecimalFormat decimalTextFormat;
     
     /**
      *
@@ -124,18 +115,10 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         this.regions = regions;
         formula1 = rule.getFormula1();
         formula2 = rule.getFormula2();
-        
-        text = rule.getText();
-        lowerText = text == null ? null : text.toLowerCase(LocaleUtil.getUserLocale());
-        
         numberFormat = rule.getNumberFormat();
         
         operator = OperatorEnum.values()[rule.getComparisonOperation()];
         type = rule.getConditionType();
-        
-//         Excel uses the stored text representation from the XML apparently, in tests done so far
-        decimalTextFormat = new DecimalFormat("0", DecimalFormatSymbols.getInstance(Locale.ENGLISH));
-        decimalTextFormat.setMaximumFractionDigits(340); // DecimalFormat.DOUBLE_FRACTION_DIGITS, which is default scoped
     }
 
     /**
@@ -209,13 +192,6 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
     }
     
     /**
-     * @return condition text if any, or null
-     */
-    public String getText() {
-        return text;
-    }
-    
-    /**
      * @return the operator
      */
     public OperatorEnum getOperator() {
@@ -231,7 +207,7 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
     
     /**
      * Defined as equal sheet name and formatting and rule indexes
-     * @see Object#equals(Object)
+     * @see java.lang.Object#equals(java.lang.Object)
      */
     @Override
     public boolean equals(Object obj) {
@@ -266,16 +242,16 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         final int x = getPriority();
         final int y = o.getPriority();
         // logic from Integer.compare()
-        cmp = Integer.compare(x, y);
+        cmp = (x < y) ? -1 : ((x == y) ? 0 : 1);
         if (cmp != 0) {
             return cmp;
         }
 
-        cmp = Integer.compare(getFormattingIndex(), o.getFormattingIndex());
+        cmp = new Integer(getFormattingIndex()).compareTo(new Integer(o.getFormattingIndex()));
         if (cmp != 0) {
             return cmp;
         }
-        return Integer.compare(getRuleIndex(), o.getRuleIndex());
+        return new Integer(getRuleIndex()).compareTo(new Integer(o.getRuleIndex()));
     }
     
     @Override
@@ -355,32 +331,33 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         ValueEval eval = unwrapEval(workbookEvaluator.evaluate(rule.getFormula1(), ConditionalFormattingEvaluator.getRef(cell), region));
         
         String f2 = rule.getFormula2();
-        ValueEval eval2 = BlankEval.instance;
+        ValueEval eval2 = null;
         if (f2 != null && f2.length() > 0) {
             eval2 = unwrapEval(workbookEvaluator.evaluate(f2, ConditionalFormattingEvaluator.getRef(cell), region));
         }
         
         // we assume the cell has been evaluated, and the current formula value stored
-        if (DataValidationEvaluator.isType(cell, CellType.BOOLEAN) 
-                && (eval == BlankEval.instance || eval instanceof BoolEval) 
-                && (eval2 == BlankEval.instance || eval2 instanceof BoolEval) 
-           ) {
-            return operator.isValid(cell.getBooleanCellValue(), eval == BlankEval.instance ? null : ((BoolEval) eval).getBooleanValue(), eval2 == BlankEval.instance ? null : ((BoolEval) eval2).getBooleanValue());
+        if (DataValidationEvaluator.isType(cell, CellType.BOOLEAN)) {
+            if (eval instanceof BoolEval && (eval2 == null || eval2 instanceof BoolEval) ) {
+                return operator.isValid(cell.getBooleanCellValue(), ((BoolEval) eval).getBooleanValue(), eval2 == null ? null : ((BoolEval) eval2).getBooleanValue());
+            }
+            return false; // wrong types
         }
-        if (DataValidationEvaluator.isType(cell, CellType.NUMERIC) 
-                && (eval == BlankEval.instance || eval instanceof NumberEval )
-                && (eval2 == BlankEval.instance || eval2 instanceof NumberEval) 
-           ) {
-            return operator.isValid(cell.getNumericCellValue(), eval == BlankEval.instance ? null : ((NumberEval) eval).getNumberValue(), eval2 == BlankEval.instance ? null : ((NumberEval) eval2).getNumberValue());
+        if (DataValidationEvaluator.isType(cell, CellType.NUMERIC)) {
+            if (eval instanceof NumberEval && (eval2 == null || eval2 instanceof NumberEval) ) {
+                return operator.isValid(cell.getNumericCellValue(), ((NumberEval) eval).getNumberValue(), eval2 == null ? null : ((NumberEval) eval2).getNumberValue());
+            }
+            return false; // wrong types
         }
-        if (DataValidationEvaluator.isType(cell, CellType.STRING)
-                && (eval == BlankEval.instance || eval instanceof StringEval )
-                && (eval2 == BlankEval.instance || eval2 instanceof StringEval) 
-           ) {
-                return operator.isValid(cell.getStringCellValue(), eval == BlankEval.instance ? null : ((StringEval) eval).getStringValue(), eval2 == BlankEval.instance ? null : ((StringEval) eval2).getStringValue());
+        if (DataValidationEvaluator.isType(cell, CellType.STRING)) {
+            if (eval instanceof StringEval && (eval2 == null || eval2 instanceof StringEval) ) {
+                return operator.isValid(cell.getStringCellValue(), ((StringEval) eval).getStringValue(), eval2 == null ? null : ((StringEval) eval2).getStringValue());
+            }
+            return false; // wrong types
         }
         
-        return operator.isValidForIncompatibleTypes();
+        // should not get here, but in case...
+        return false;
     }
     
     private ValueEval unwrapEval(ValueEval eval) {
@@ -393,7 +370,7 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         return comp;
     }
     /**
-     * @param ref needed for offsets from region anchor - may be null!
+     * @param cell needed for offsets from region anchor - may be null!
      * @param region for adjusting relative formulas
      * @return true/false using the same rules as Data Validation evaluations
      */
@@ -425,7 +402,7 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         }
 
         final ValueAndFormat cv = getCellValue(cell);
-
+        
         // TODO: this could/should be delegated to the Enum type, but that's in the usermodel package,
         // we may not want evaluation code there.  Of course, maybe the enum should go here in formula,
         // and not be returned by the SS model, but then we need the XSSF rule to expose the raw OOXML
@@ -444,12 +421,13 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
             return getMeaningfulValues(region, false, new ValueFunction() {
                 @Override
                 public Set<ValueAndFormat> evaluate(List<ValueAndFormat> allValues) {
+                    List<ValueAndFormat> values = allValues;
                     final ConditionFilterData conf = rule.getFilterConfiguration();
                     
                     if (! conf.getBottom()) {
-                        allValues.sort(Collections.reverseOrder());
+                        Collections.sort(values, Collections.reverseOrder());
                     } else {
-                        Collections.sort(allValues);
+                        Collections.sort(values);
                     }
                     
                     int limit = (int) conf.getRank();
@@ -457,10 +435,10 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
                         limit = allValues.size() * limit / 100;
                     }
                     if (allValues.size() <= limit) {
-                        return new HashSet<>(allValues);
+                        return new HashSet<ValueAndFormat>(allValues);
                     }
 
-                    return new HashSet<>(allValues.subList(0, limit));
+                    return new HashSet<ValueAndFormat>(allValues.subList(0, limit));
                 }
             }).contains(cv);
         case UNIQUE_VALUES:
@@ -469,14 +447,15 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
             return getMeaningfulValues(region, true, new ValueFunction() {
                 @Override
                 public Set<ValueAndFormat> evaluate(List<ValueAndFormat> allValues) {
-                    Collections.sort(allValues);
+                    List<ValueAndFormat> values = allValues;
+                    Collections.sort(values);
                     
-                    final Set<ValueAndFormat> unique = new HashSet<>();
+                    final Set<ValueAndFormat> unique = new HashSet<ValueAndFormat>();
                     
-                    for (int i = 0; i < allValues.size(); i++) {
-                        final ValueAndFormat v = allValues.get(i);
+                    for (int i=0; i < values.size(); i++) {
+                        final ValueAndFormat v = values.get(i);
                         // skip this if the current value matches the next one, or is the last one and matches the previous one
-                        if ( (i < allValues.size()-1 && v.equals(allValues.get(i+1)) ) || ( i > 0 && i == allValues.size()-1 && v.equals(allValues.get(i-1)) ) ) {
+                        if ( (i < values.size()-1 && v.equals(values.get(i+1)) ) || ( i > 0 && i == values.size()-1 && v.equals(values.get(i-1)) ) ) {
                             // current value matches next value, skip both
                             i++;
                             continue;
@@ -493,14 +472,15 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
             return getMeaningfulValues(region, true, new ValueFunction() {
                 @Override
                 public Set<ValueAndFormat> evaluate(List<ValueAndFormat> allValues) {
-                    Collections.sort(allValues);
+                    List<ValueAndFormat> values = allValues;
+                    Collections.sort(values);
                     
-                    final Set<ValueAndFormat> dup = new HashSet<>();
+                    final Set<ValueAndFormat> dup = new HashSet<ValueAndFormat>();
                     
-                    for (int i = 0; i < allValues.size(); i++) {
-                        final ValueAndFormat v = allValues.get(i);
+                    for (int i=0; i < values.size(); i++) {
+                        final ValueAndFormat v = values.get(i);
                         // skip this if the current value matches the next one, or is the last one and matches the previous one
-                        if ( (i < allValues.size()-1 && v.equals(allValues.get(i+1)) ) || ( i > 0 && i == allValues.size()-1 && v.equals(allValues.get(i-1)) ) ) {
+                        if ( (i < values.size()-1 && v.equals(values.get(i+1)) ) || ( i > 0 && i == values.size()-1 && v.equals(values.get(i-1)) ) ) {
                             // current value matches next value, add one
                             dup.add(v);
                             i++;
@@ -516,22 +496,23 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
             final ConditionFilterData conf = rule.getFilterConfiguration();
 
             // actually ordered, so iteration order is predictable
-            List<ValueAndFormat> values = new ArrayList<>(getMeaningfulValues(region, false, new ValueFunction() {
+            List<ValueAndFormat> values = new ArrayList<ValueAndFormat>(getMeaningfulValues(region, false, new ValueFunction() {
                 @Override
                 public Set<ValueAndFormat> evaluate(List<ValueAndFormat> allValues) {
+                    List<ValueAndFormat> values = allValues;
                     double total = 0;
-                    ValueEval[] pop = new ValueEval[allValues.size()];
-                    for (int i = 0; i < allValues.size(); i++) {
-                        ValueAndFormat v = allValues.get(i);
+                    ValueEval[] pop = new ValueEval[values.size()];
+                    for (int i=0; i < values.size(); i++) {
+                        ValueAndFormat v = values.get(i);
                         total += v.value.doubleValue();
                         pop[i] = new NumberEval(v.value.doubleValue());
                     }
-
-                    final Set<ValueAndFormat> avgSet = new LinkedHashSet<>(1);
-                    avgSet.add(new ValueAndFormat(Double.valueOf(allValues.size() == 0 ? 0 : total / allValues.size()), null, decimalTextFormat));
-
-                    final double stdDev = allValues.size() <= 1 ? 0 : ((NumberEval) AggregateFunction.STDEV.evaluate(pop, 0, 0)).getNumberValue();
-                    avgSet.add(new ValueAndFormat(Double.valueOf(stdDev), null, decimalTextFormat));
+                    
+                    final Set<ValueAndFormat> avgSet = new LinkedHashSet<ValueAndFormat>(1);
+                    avgSet.add(new ValueAndFormat(new Double(values.size() == 0 ? 0 : total / values.size()), null));
+                    
+                    final double stdDev = values.size() <= 1 ? 0 : ((NumberEval) AggregateFunction.STDEV.evaluate(pop, 0, 0)).getNumberValue();
+                    avgSet.add(new ValueAndFormat(new Double(stdDev), null));
                     return avgSet;
                 }
             }));
@@ -550,9 +531,9 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
              * operator type
              */
             
-            Double comp = Double.valueOf(conf.getStdDev() > 0 ? (avg + (conf.getAboveAverage() ? 1 : -1) * stdDev * conf.getStdDev()) : avg) ;
+            Double comp = new Double(conf.getStdDev() > 0 ? (avg + (conf.getAboveAverage() ? 1 : -1) * stdDev * conf.getStdDev()) : avg) ;
             
-            final OperatorEnum op;
+            OperatorEnum op = null;
             if (conf.getAboveAverage()) {
                 if (conf.getEqualAverage()) {
                     op = OperatorEnum.GREATER_OR_EQUAL;
@@ -566,19 +547,19 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
                     op = OperatorEnum.LESS_THAN;
                 }
             }
-            return op.isValid(val, comp, null);
+            return op != null && op.isValid(val, comp, null);
         case CONTAINS_TEXT:
-            // implemented both by a cfRule "text" attribute and a formula.  Use the text.
-            return text == null ? false : cv.toString().toLowerCase(LocaleUtil.getUserLocale()).contains(lowerText);
+            // implemented both by a cfRule "text" attribute and a formula.  Use the formula.
+            return checkFormula(ref, region);
         case NOT_CONTAINS_TEXT:
-            // implemented both by a cfRule "text" attribute and a formula.  Use the text.
-            return text == null ? true : ! cv.toString().toLowerCase(LocaleUtil.getUserLocale()).contains(lowerText);
+            // implemented both by a cfRule "text" attribute and a formula.  Use the formula.
+            return checkFormula(ref, region);
         case BEGINS_WITH:
-            // implemented both by a cfRule "text" attribute and a formula.  Use the text.
-            return cv.toString().toLowerCase(LocaleUtil.getUserLocale()).startsWith(lowerText);
+            // implemented both by a cfRule "text" attribute and a formula.  Use the formula.
+            return checkFormula(ref, region);
         case ENDS_WITH:
-            // implemented both by a cfRule "text" attribute and a formula.  Use the text.
-            return cv.toString().toLowerCase(LocaleUtil.getUserLocale()).endsWith(lowerText);
+            // implemented both by a cfRule "text" attribute and a formula.  Use the formula.
+            return checkFormula(ref, region);
         case CONTAINS_BLANKS:
             try {
                 String v = cv.getString();
@@ -622,7 +603,7 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
             return values;
         }
         
-        List<ValueAndFormat> allValues = new ArrayList<>((region.getLastColumn() - region.getFirstColumn() + 1) * (region.getLastRow() - region.getFirstRow() + 1));
+        List<ValueAndFormat> allValues = new ArrayList<ValueAndFormat>((region.getLastColumn() - region.getFirstColumn()+1) * (region.getLastRow() - region.getFirstRow() + 1));
         
         for (int r=region.getFirstRow(); r <= region.getLastRow(); r++) {
             final Row row = sheet.getRow(r);
@@ -646,12 +627,12 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
 
     private ValueAndFormat getCellValue(Cell cell) {
         if (cell != null) {
-            final CellType type = cell.getCellType();
-            if (type == CellType.NUMERIC || (type == CellType.FORMULA && cell.getCachedFormulaResultType() == CellType.NUMERIC) ) {
-                return new ValueAndFormat(Double.valueOf(cell.getNumericCellValue()), cell.getCellStyle().getDataFormatString(), decimalTextFormat);
-            } else if (type == CellType.STRING || (type == CellType.FORMULA && cell.getCachedFormulaResultType() == CellType.STRING) ) {
+            final CellType type = cell.getCellTypeEnum();
+            if (type == CellType.NUMERIC || (type == CellType.FORMULA && cell.getCachedFormulaResultTypeEnum() == CellType.NUMERIC) ) {
+                return new ValueAndFormat(new Double(cell.getNumericCellValue()), cell.getCellStyle().getDataFormatString());
+            } else if (type == CellType.STRING || (type == CellType.FORMULA && cell.getCachedFormulaResultTypeEnum() == CellType.STRING) ) {
                 return new ValueAndFormat(cell.getStringCellValue(), cell.getCellStyle().getDataFormatString());
-            } else if (type == CellType.BOOLEAN || (type == CellType.FORMULA && cell.getCachedFormulaResultType() == CellType.BOOLEAN) ) {
+            } else if (type == CellType.BOOLEAN || (type == CellType.FORMULA && cell.getCachedFormulaResultTypeEnum() == CellType.BOOLEAN) ) {
                 return new ValueAndFormat(cell.getStringCellValue(), cell.getCellStyle().getDataFormatString());
             }
         }
@@ -688,57 +669,18 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         BETWEEN {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    if (cellValue instanceof Number) {
-                        // use zero for null
-                        double n1 = 0;
-                        double n2 = v2 == null ? 0 : ((Number) v2).doubleValue();
-                        return Double.compare( ((Number) cellValue).doubleValue(), n1) >= 0 && Double.compare(((Number) cellValue).doubleValue(), n2) <= 0;
-                    } else if (cellValue instanceof String) {
-                        String n1 = "";
-                        String n2 = v2 == null ? "" : (String) v2;
-                        return ((String) cellValue).compareToIgnoreCase(n1) >= 0 && ((String) cellValue).compareToIgnoreCase(n2) <= 0;
-                    } else if (cellValue instanceof Boolean) return false;
-                    return false; // just in case - not a typical possibility
-                }
                 return cellValue.compareTo(v1) >= 0 && cellValue.compareTo(v2) <= 0;
             }
         },
         NOT_BETWEEN {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    if (cellValue instanceof Number) {
-                        // use zero for null
-                        double n1 = 0;
-                        double n2 = v2 == null ? 0 : ((Number) v2).doubleValue();
-                        return Double.compare( ((Number) cellValue).doubleValue(), n1) < 0 || Double.compare(((Number) cellValue).doubleValue(), n2) > 0;
-                    } else if (cellValue instanceof String) {
-                        String n1 = "";
-                        String n2 = v2 == null ? "" : (String) v2;
-                        return ((String) cellValue).compareToIgnoreCase(n1) < 0 || ((String) cellValue).compareToIgnoreCase(n2) > 0;
-                    } else if (cellValue instanceof Boolean) return true;
-                    return false; // just in case - not a typical possibility
-                }
                 return cellValue.compareTo(v1) < 0 || cellValue.compareTo(v2) > 0;
-            }
-            
-            public boolean isValidForIncompatibleTypes() {
-                return true;
             }
         },
         EQUAL {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    if (cellValue instanceof Number) {
-                        // use zero for null
-                        return Double.compare( ((Number) cellValue).doubleValue(), 0) == 0;
-                    } else if (cellValue instanceof String) {
-                        return false; // even an empty string is not equal the empty cell, only another empty cell is, handled higher up
-                    } else if (cellValue instanceof Boolean) return false;
-                    return false; // just in case - not a typical possibility
-                }
                 // need to avoid instanceof, to work around a 1.6 compiler bug
                 if (cellValue.getClass() == String.class) {
                     return cellValue.toString().compareToIgnoreCase(v1.toString()) == 0;
@@ -749,77 +691,34 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         NOT_EQUAL {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    return true; // non-null not equal null, returns true
-                }
                 // need to avoid instanceof, to work around a 1.6 compiler bug
                 if (cellValue.getClass() == String.class) {
                     return cellValue.toString().compareToIgnoreCase(v1.toString()) == 0;
                 }
                 return cellValue.compareTo(v1) != 0;
             }
-            
-            public boolean isValidForIncompatibleTypes() {
-                return true;
-            }
         },
         GREATER_THAN {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    if (cellValue instanceof Number) {
-                        // use zero for null
-                        return Double.compare( ((Number) cellValue).doubleValue(), 0) > 0;
-                    } else if (cellValue instanceof String) {
-                        return true; // non-null string greater than empty cell
-                    } else if (cellValue instanceof Boolean) return true;
-                    return false; // just in case - not a typical possibility
-                }
                 return cellValue.compareTo(v1) > 0;
             }
         },
         LESS_THAN {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    if (cellValue instanceof Number) {
-                        // use zero for null
-                        return Double.compare( ((Number) cellValue).doubleValue(), 0) < 0;
-                    } else if (cellValue instanceof String) {
-                        return false; // non-null string greater than empty cell
-                    } else if (cellValue instanceof Boolean) return false;
-                    return false; // just in case - not a typical possibility
-                }
                 return cellValue.compareTo(v1) < 0;
             }
         },
         GREATER_OR_EQUAL {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    if (cellValue instanceof Number) {
-                        // use zero for null
-                        return Double.compare( ((Number) cellValue).doubleValue(), 0) >= 0;
-                    } else if (cellValue instanceof String) {
-                        return true; // non-null string greater than empty cell
-                    } else if (cellValue instanceof Boolean) return true;
-                    return false; // just in case - not a typical possibility
-                }
                 return cellValue.compareTo(v1) >= 0;
             }
         },
         LESS_OR_EQUAL {
             @Override
             public <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2) {
-                if (v1 == null) {
-                    if (cellValue instanceof Number) {
-                        // use zero for null
-                        return Double.compare( ((Number) cellValue).doubleValue(), 0) <= 0;
-                    } else if (cellValue instanceof String) {
-                        return false; // non-null string not less than empty cell
-                    } else if (cellValue instanceof Boolean) return false; // for completeness
-                    return false; // just in case - not a typical possibility
-                }
                 return cellValue.compareTo(v1) <= 0;
             }
         },
@@ -828,20 +727,11 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         /**
          * Evaluates comparison using operator instance rules
          * @param cellValue won't be null, assumption is previous checks handled that
-         * @param v1 if null, per Excel behavior various results depending on the type of cellValue and the specific enum instance
-         * @param v2 null if not needed.  If null when needed, various results, per Excel behavior
+         * @param v1 if null, value assumed invalid, anything passes, per Excel behavior
+         * @param v2 null if not needed.  If null when needed, assume anything passes, per Excel behavior
          * @return true if the comparison is valid
          */
         public abstract <C extends Comparable<C>> boolean isValid(C cellValue, C v1, C v2);
-        
-        /**
-         * Called when the cell and comparison values are of different data types
-         * Needed for negation operators, which should return true.
-         * @return true if this comparison is true when the types to compare are different
-         */
-        public boolean isValidForIncompatibleTypes() {
-            return false;
-        }
     }
     
     /**
@@ -852,20 +742,17 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         private final Double value;
         private final String string;
         private final String format;
-        private final DecimalFormat decimalTextFormat;
         
-        public ValueAndFormat(Double value, String format, DecimalFormat df) {
+        public ValueAndFormat(Double value, String format) {
             this.value = value;
             this.format = format;
             string = null;
-            decimalTextFormat = df;
         }
         
         public ValueAndFormat(String value, String format) {
             this.value = null;
             this.format = format;
             string = value;
-            decimalTextFormat = null;
         }
         
         public boolean isNumber() {
@@ -878,14 +765,6 @@ public class EvaluationConditionalFormatRule implements Comparable<EvaluationCon
         
         public String getString() {
             return string;
-        }
-        
-        public String toString() {
-            if(isNumber()) {
-                return decimalTextFormat.format(getValue().doubleValue());
-            } else {
-                return getString();
-            }
         }
         
         @Override
